--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -9,10 +9,9 @@ Pierangelo Masarati     <masarati@aero.polimi.it>
 Paolo Mantegazza        <mantegazza@aero.polimi.it>
 
 
-MBDyn 1.X-Devel
+MBDyn 1.7.2
 	Enhancements:
 		- added contrib/Post (Marco Morandini)
-		- added screw joint (Mauro Manetti & Marco Morandini)
 		- added "raw" variants of buffer drive and output elem
 		- added private data to electric motor (Reinhard Resch)
 		- added initial current to electric motor (Reinhard Resch)
