--- a/mbdyn/manual/input/general.tex
+++ b/mbdyn/manual/input/general.tex
@@ -3285,8 +3285,8 @@ Implements the type \hty{Shape}.
 The input format of shape functions is:
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
-    \bnt{shape_function} ::= \bnt{shape_function_type} ,
-        \bnt{shape_function_arglist}
+    \bnt{shape_function} ::= \bnt{shape_function_type}
+        [ , \bnt{shape_function_arglist} ]
 \end{Verbatim}
 %\end{verbatim}
 Currently implemented shape functions for friction models are:
